[metadata]
name = pjled
version = 0.1.1
author = Andrew Powers-Holmes
author_email = aholmes@omnom.net
license_files = LICENSE.md

[options]
packages = find:
package_dir =
    =src
py_modules =
    pjled
include_package_data = True
install_requires =
    click >= 8.1.0
    logzero >= 1.7.0
    smbus >= 1.1.post2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pjled = pjled.pjled:cli
